# nilang

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  backlog.txt  fib.la  golden_test_generator.rb  install.sh  intrinsics.txt  notes  test.foo  test.la  test.txt
benches/: lexer.rs
benches/baselines/: bubble_sort.txt  call_heavy.txt  gc_pressure.txt  hello_world.txt  synthetic.txt
benches/reports/: bubble_sort.txt  call_heavy.txt  gc_pressure.txt  hello_world.txt  synthetic.txt
benches/scripts/: bubble_sort.nl  call_heavy.nl  gc_pressure.nl  synthetic.nl
examples/: anon_func.nl  closure_example.nl  collatz.nl  const_propagation_test.nl  control_flow.nl  deeply_nested_closure.nl  eratosthenes_sieve.nl  euclidean_gcd.nl  export_example.nl  fib.la  fibonacci.nl  fizzbuzz.nl  game_of_life.nl  genesis.nl  global_values.nl  gpu_test.nl  hello.la  helloworld.nl  import_example.nl  kaleidoscope.nl  maps.nl  marching_ants.nl  maze_generation.nl  number_guessing_game.nl  oop_via_closures.nl  parser_error.nl  plugin_test.nl  quicksort.nl  quine.nl  runtime_type_error.nl  seconds_to_days.nl  shopping_cart.nl  simple_phi_node.nl  snake.nl  stack_overflow.nl  tic_tac_toe.nl  tower_of_hanoi.nl  vigenere_cipher.nl  while_loop.nl
examples/example_plugin/: Cargo.toml
examples/gpu_plugin/: Cargo.toml
scripts/: bench.rb  fixture_test_generator.rb  golden_test_generator.rb
src/: benchmark.rs  bytecode.rs  cfg.rs  cfg_builder.rs  cfg_display.rs  compile.rs  dfa.rs  driver.rs  generator.rs  lexer.rs  lib.rs  liveness_dfa.rs  macros.rs  main.rs  op.rs  parser.rs  repl.rs  span.rs  spanned.rs  ssa_conversion.rs  symbol_map.rs  tac.rs  vm.rs
src/codegen/: func.rs  (+7 more)
std/: main.nl
tests/: ast_tests.rs  integration_tests.rs
(+682 files in other folders)
