[package]
name = "nilang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
sandpit = { git = "https://github.com/Nilando/sandpit", branch = "develop" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
termion = "4.0.4"
